[package]
name = "rs-raft"
version = "0.1.0"
authors = ["Kanstantsin Gerasimovich <gerask@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.22"
futures = "0.3.15"
tokio = { version = "1", features = ["full"] }

# Test dependencies
mockall = "0.9.1"
